force-app/main/default/objects/TT_Sprint__c/TT_Sprint__c.object-meta.xml
<CustomObject>
    <label>TT Sprint</label>
    <nameField>
        <displayFormat>Sprint-{000}</displayFormat>
        <label>Sprint ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TT Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>