force-app/main/default/objects/TT_Sprint__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated for Digital Compass sprints only — the client account this sprint delivers for. Internal and Programs sprints leave blank</description>
    <inlineHelpText>Populated for Digital Compass sprints only — the client account this sprint delivers for. Internal and Programs sprints leave blank</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TT Sprints</relationshipLabel>
    <relationshipName>TT_Sprints</relationshipName>
    <type>Lookup</type>
</CustomField>