force-app/main/default/objects/TT_Sprint__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <description>Which 12-week cycle this sprint belongs to. Use a consistent label: &apos;2026-C3&apos; or &apos;Cycle 3 Q3-2026&apos;. Each sprint type runs its own cycle counter independently.</description>
    <inlineHelpText>Which 12-week cycle this sprint belongs to. Use a consistent label: &apos;2026-C3&apos; or &apos;Cycle 3 Q3-2026&apos;. Each sprint type runs its own cycle counter independently.</inlineHelpText>
    <label>Cycle</label>
    <length>20</length>
    <type>Text</type>
</CustomField>