force-app/main/default/objects/TT_Sprint__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Sprint end date. For Internal: Start + 21 days. For Digital Compass / Programs: Start + 28 days.</description>
    <inlineHelpText>Sprint end date. For Internal: Start + 21 days. For Digital Compass / Programs: Start + 28 days.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>