force-app/main/default/objects/TT_Sprint__c/fields/Goals__c.field-meta.xml
<CustomField>
    <fullName>Goals__c</fullName>
    <description>One paragraph describing what this sprint is trying to accomplish — not a ceremony artifact, just enough context for the team</description>
    <inlineHelpText>One paragraph describing what this sprint is trying to accomplish — not a ceremony artifact, just enough context for the team</inlineHelpText>
    <label>Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>