force-app/main/default/objects/TT_Sprint__c/fields/Sprint_Number__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Number__c</fullName>
    <description>Position within the cycle: 1 through 4 for Internal; 1 through 3 for Digital Compass and Programs.</description>
    <inlineHelpText>Position within the cycle: 1 through 4 for Internal; 1 through 3 for Digital Compass and Programs.</inlineHelpText>
    <label>Sprint Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>