force-app/main/default/objects/TT_Sprint__c/fields/Sprint_Type__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Type__c</fullName>
    <label>Sprint Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal — TrailOS admin/build work (3-week cadence)</fullName>
                <default>true</default>
                <label>Internal — TrailOS admin/build work (3-week cadence)</label>
            </value>
            <value>
                <fullName>Digital Compass — client delivery projects (4-week cadence)</fullName>
            </value>
            <value>
                <fullName>Programs — learner cohort cadence (4-week cadence).</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>