force-app/main/default/objects/TT_Sprint__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Sprint start date</description>
    <inlineHelpText>Sprint start date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>