force-app/main/default/objects/TT_Sprint__c/fields/Total_Completed_Stories__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_Stories__c</fullName>
    <description>Number of stories associated with the sprint that have been completed</description>
    <inlineHelpText>Number of stories associated with the sprint that have been completed</inlineHelpText>
    <label>Total Completed Stories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>