force-app/main/default/objects/TT_Sprint__c/fields/Total_Stories__c.field-meta.xml
<CustomField>
    <fullName>Total_Stories__c</fullName>
    <description>Number of stories associated with the sprint</description>
    <inlineHelpText>Number of stories associated with the sprint</inlineHelpText>
    <label>Total Stories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>